scss/_base/_typography.scss
// Set border-box on all the elements!
* {
  box-sizing: border-box;
}

// Base HTML elements
html {
  color: $base-font-color;
  font-family: $base-font-family;
  font-weight: $weight-normal;
  font-size: $base-font-size;
  line-height: $unitless-line-height;
}

body {
  width: 100%;
  background: $base-background-color;
  color: $base-font-color;
  font-family: $font-proxima-nova;
  font-size: $font-regular;
  font-weight: $weight-normal;
  line-height: $unitless-line-height;
}

// Various heading weights. The `.heading` class can be used to pair specific heading styles to non-semantic classes, such as `.heading.-alpha` to apply `h1` styles on a specific element.
//
// .-banner - Stylized header banners.
//
// Styleguide Typography - Headings
h1, h2, h3, h4, h5, h6,
.heading.-hero, .heading.-alpha, .heading.-beta,
.heading.-gamma, .heading.-delta, .heading.-epsilon {
  clear: both;
  font-family: $base-font-family;
  font-weight: $weight-bold;
  line-height: $header-line-height;
  color: $purple;
  margin: 0 0 ($base-spacing / 6);
  text-rendering: optimizeLegibility;
}

.heading.-banner {
  background: $black;
  color: $white;
  text-transform: uppercase;
  padding: ($base-spacing / 2) 0;
  margin: 0;

  @include clearfix;

  span {
    padding-left: $base-spacing;

    @include media($tablet) {
      @include span(12);
      @include push(2);
    }
  }
}

.heading.-hero {
  font-size: $font-larger;

  @include media($tablet) {
    font-size: $font-hero;
  }
}

h1, .heading.-alpha {
  font-size: $font-large;

  @include media($tablet) {
    font-size: $font-larger;
  }
}

h2, .heading.-beta {
  font-size: $font-medium;

  @include media($tablet) {
    font-size: $font-large;
  }
}

h3, .heading.-gamma {
  color: $dark-gray;
  font-size: $font-medium;
  font-weight: $weight-sbold;
}

h4, h5, h6, .heading.-delta {
  color: $dark-gray;
  font-size: $font-regular;
  font-weight: $weight-sbold;
}

// List of items with no ordering.
//
// Styleguide Typography - Unordered Lists
ul {
  list-style-type: square;
  padding-left: $base-spacing;
}

// List of items with numerical ordering.
//
// Styleguide Typography - Ordered Lists
ol {
  list-style-type: decimal;
  padding-left: $base-spacing;
}

li + li {
  margin-top: $base-spacing;
}

// Inline text elements.
//
// Styleguide Typography - Inline Elements
p, ul, ol {
  font-size: $font-regular;

  // Apply base spacing between adjacent paragraphs, and
  // headings that follow paragraph text.
  + p, + ul, + ol {
    margin-top: $base-spacing;
  }

  + h1, + h2, + h3, + h4, + h5, + h6 {
    margin-top: $base-spacing * 2;
  }
}

// Links!
//
// Styleguide Typography - Links
a {
  color: $blue;
  font-weight: $weight-sbold;
  text-decoration: none;

  &:hover {
    color: lighten($blue, $tint);
    text-decoration: underline;
  }

  &:active {
    color: darken($blue, $tint);
  }

  &.secondary {
    color: $med-gray;
    font-weight: $weight-normal;
    text-decoration: underline;
  }
}


// By default, images should not break out of their containers.
//
// Styleguide Typography - Images
img {
  display: block;
  max-width: 100%;
  width: auto;
  height: auto;
}

// Emphasized content, displayed with a bold font.
//
// Styleguide Typography - Bold
strong, b {
  font-weight: $weight-sbold;
}

// Emphasized content, displayed with italicized font.
//
// Styleguide Typography - Italics
em {
  font-style: italic;
}

// Emphasized content, displayed with a highlighted effect.
//
// Styleguide Typography - Highlighted Text
mark {
  background: #fdfbbd;
}

// A fragment of computer code
//
// Styleguide Typography - Code
code {
  font-family: "Menlo", "Consolas", "Courier New", serif;
  font-size: 0.8em;
}

// Superscript is used for special markup, such as footnotes.
//
// Styleguide Typography - Superscript
sup {
  display: inline-block;
  position: relative;
  top: -0.4em;
  font-size: 0.6em;
  padding: 0;
}

